# searchengine_by_rust

./: .dockerignore  .env  README.md  docker-compose-dev.yml  docker-compose.yml
docker/elasticsearch/: jvm.options  sysctl.conf
docker/nginx/: default.conf  default_dev.conf  nginx.conf
docker/redis/: redis.conf
docker/rust/: Dockerfile
frontend/: README.md  next.config.mjs  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/contact/: page.js
frontend/app/privacypolicy/: page.js
frontend/app/search_result/: page.js
search/: .env  Cargo.toml
search/log/: .gitignore
search/src/: main.rs
search/src/api/: hello.rs  mod.rs  search.rs
search/src/api/api_handler/: handler.rs
search/src/api/utility/: cache.rs  mod.rs
