[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[dependencies]
# server
actix = "0.13"
actix-web = "4.11"
actix-rt = "2"
actix-cors = "0.7"
actix-service = "2"
actix-session = "0.10.1"
actix-limitation = "0.5"
futures = "0.3"
redis = { version = "0.31", features = [
    "tokio-comp",
    "json",
    "tokio-rustls-comp",
] }

# db
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"

elasticsearch = "9.0.0-alpha.1"

# auth
jsonwebtoken = "9"
bcrypt = "0.17"

# other, like json, logger
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
colored = "3"
rand = "0.9"
lazy_static = "1.5"
url = "2.5"
regex = "1.11.1"
